--- a/todo.yaml
+++ b/todo.yaml
@@ -17,7 +17,7 @@ spec:
   type: openapi
   lifecycle: experimental
   owner: makkaji
-  definition: 
+  definition: |
     openapi: "3.0.0"
     info:
       version: 1.0.0
