--- a/todo.yaml
+++ b/todo.yaml
@@ -18,111 +18,104 @@ spec:
   lifecycle: experimental
   owner: makkaji
   definition: |
-    openapi: "3.0.0"
+    openapi: 3.0.1
     info:
-      version: 1.0.0
-      title: .Net Core Web API
-      license:
-        name: MIT
-    servers:
-      - url: https://localhost:44336
+      title: WebAPI
+      version: '1.0'
     paths:
       /todoitems:
         get:
-          summary: List all todo items
-          operationId: List
           tags:
-            - todo items
+            - Todo
           responses:
             '200':
-              description: A array of todo items
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Todos"
-            default:
-              description: unexpected error
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Error"
+              description: Success
         post:
-          summary: Create a todo item
-          operationId: Create
           tags:
-            - todo-items
+            - Todo
           requestBody:
-            description: Optional description in *Markdown*
-            required: true
             content:
-                application/json:
+              application/json:
                 schema:
-                    $ref: '#/components/schemas/Todo'
-            
+                  $ref: '#/components/schemas/Todo'
+              text/json:
+                schema:
+                  $ref: '#/components/schemas/Todo'
+              application/*+json:
+                schema:
+                  $ref: '#/components/schemas/Todo'
           responses:
-            '201':
-              description: Null response
-            default:
-              description: unexpected error
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Error"
-      /todoitems/{id}:
+            '200':
+              description: Success
+      /todoitems/complete:
         get:
-          summary: Info for a specific todo item
-          operationId: GetById
           tags:
-            - todo items
+            - Todo
+          responses:
+            '200':
+              description: Success
+      '/todoitems/{id}':
+        get:
+          tags:
+            - Todo
           parameters:
             - name: id
               in: path
               required: true
-              description: The id of the todo item to retrieve
               schema:
-                type: string
+                type: integer
+                format: int32
           responses:
             '200':
-              description: Expected response to a valid request
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Todo"
-            default:
-              description: unexpected error
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Error"
+              description: Success
+        put:
+          tags:
+            - Todo
+          parameters:
+            - name: id
+              in: path
+              required: true
+              schema:
+                type: integer
+                format: int32
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Todo'
+              text/json:
+                schema:
+                  $ref: '#/components/schemas/Todo'
+              application/*+json:
+                schema:
+                  $ref: '#/components/schemas/Todo'
+          responses:
+            '200':
+              description: Success
+        delete:
+          tags:
+            - Todo
+          parameters:
+            - name: id
+              in: path
+              required: true
+              schema:
+                type: integer
+                format: int32
+          responses:
+            '200':
+              description: Success
     components:
-        schemas:
-            Todo:
-                type: object
-                required:
-                    - id
-                    - name
-                    - isComplete
-                properties:
-                    id:
-                        type: integer
-                        format: int64
-                    name:
-                        type: string
-                    isComplete:
-                        type: boolean
-            Todos:
-                type: array
-                items:
-                    $ref: "#/components/schemas/Todo"
-            Error:
-                type: object
-                required:
-                    - code
-                    - message
-                properties:
-                    code:
-                        type: integer
-                        format: int32
-                    message:
-                        type: string
-        
+      schemas:
+        Todo:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int32
+            name:
+              type: string
+              nullable: true
+            isComplete:
+              type: boolean
+          additionalProperties: false
