--- a/todo.yaml
+++ b/todo.yaml
@@ -22,6 +22,8 @@ spec:
     info:
       title: WebAPI
       version: '1.0'
+    servers:
+      - url: https://localhost:44336/
     paths:
       /todoitems:
         get:
