--- a/todo.yaml
+++ b/todo.yaml
@@ -31,6 +31,7 @@ spec:
         get:
           tags:
             - Todo
+          x-samples-languages: ["curl","python","go"]  
           responses:
             '200':
               description: Success
