--- a/todo.yaml
+++ b/todo.yaml
@@ -27,7 +27,7 @@ spec:
     x-readme:
         explorer-enabled: false
         proxy-enabled: false
-        samples-languages": ["curl","python","go"]
+        samples-languages: ["curl","python","go"]
     servers:
       - url: https://webapi20220913163904.azurewebsites.net/
     paths:
