--- a/todo.yaml
+++ b/todo.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
   name: poc-backstage-api-3
-  description: The todos API
+  description: The todos API 3
   tags:
     - todo
     - dot-net-core-web-api
