--- a/todo.yaml
+++ b/todo.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: poc-backstage-api
+  name: poc-backstage-api-v2
   description: The todos API 34
   tags:
     - todo
